k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kingston-inc
  labels:
    app: kingston-inc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kingston-inc
  template:
    metadata:
      labels:
        app: kingston-inc
    spec:
      containers:
      - name: app
        image: srvbhtngr/kingstoninc:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: kingston-inc
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
