k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kingston-inc-ingress
spec:
  rules:
    - host: kingston-inc.com
      http:
        paths:
          - pathType: Prefix
            path: /api/
            backend:
              service:
                name: app-service
                port:
                  number: 80
